--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -94,6 +94,7 @@ QT_MOC_CPP = \
   qt/moc_addeditluxnode.cpp \
   qt/moc_luxnodeconfigdialog.cpp \
   qt/moc_multisenddialog.cpp \
+  qt/moc_navigationbar.cpp \
   qt/moc_notificator.cpp \
   qt/moc_openuridialog.cpp \
   qt/moc_optionsdialog.cpp \
@@ -193,6 +194,7 @@ BITCOIN_QT_H = \
   qt/luxnodeconfigdialog.h \
   qt/multisenddialog.h \
   qt/networkstyle.h \
+  qt/navigationbar.h \
   qt/notificator.h \
   qt/openuridialog.h \
   qt/optionsdialog.h \
@@ -311,6 +313,7 @@ BITCOIN_QT_CPP = \
   qt/masternodemanager.cpp \
   qt/addeditluxnode.cpp \
   qt/luxnodeconfigdialog.cpp \
+  qt/navigationbar.cpp \
   qt/networkstyle.cpp \
   qt/notificator.cpp \
   qt/optionsdialog.cpp \
@@ -354,6 +357,7 @@ BITCOIN_QT_CPP += \
   qt/editaddressdialog.cpp \
   qt/execrpccommand.cpp \
   qt/editcontractinfodialog.cpp \
+  qt/navigationbar.cpp \
   qt/masternodemanager.cpp \
   qt/addeditluxnode.cpp \
   qt/luxnodeconfigdialog.cpp \
