--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -277,6 +277,7 @@ RES_ICONS = \
   qt/res/icons/overview.png \
   qt/res/icons/smartcontract.png \
   qt/res/icons/qrcode.png \
+  qt/res/icons/lsrtoken.png \
   qt/res/icons/quit.png \
   qt/res/icons/receive.png \
   qt/res/icons/remove.png \
