--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -102,6 +102,7 @@ QT_MOC_CPP = \
   qt/moc_overviewpage.cpp \
   qt/moc_stakingdialog.cpp \
   qt/moc_tradingdialog.cpp \
+  qt/moc_tokenamountfield.cpp \
   qt/moc_qcustomplot.cpp \
   qt/moc_peertablemodel.cpp \
   qt/moc_paymentserver.cpp \
@@ -117,6 +118,7 @@ QT_MOC_CPP = \
   qt/moc_sendcoinsentry.cpp \
   qt/moc_sendtocontract.cpp \
   qt/moc_sendtokenpage.cpp \
+  qt/moc_tokenitemmodel.cpp \
   qt/moc_signverifymessagedialog.cpp \
   qt/moc_splashscreen.cpp \
   qt/moc_tabbarinfo.cpp \
@@ -139,6 +141,7 @@ QT_MOC = \
   qt/lux.moc \
   qt/bitcoinamountfield.moc \
   qt/intro.moc \
+  qt/tokenamountfield.moc \
   qt/overviewpage.moc \
   qt/rpcconsole.moc
 
@@ -162,7 +165,6 @@ BITCOIN_QT_H = \
   qt/qvalidatedlineedit.h \
   qt/createcontract.h \
   qt/addresstablemodel.h \
-  qt/token.h \
   qt/addtokenpage.h \
   qt/askpassphrasedialog.h \
   qt/bip38tooldialog.h \
@@ -223,6 +225,9 @@ BITCOIN_QT_H = \
   qt/signverifymessagedialog.h \
   qt/splashscreen.h \
   qt/tabbarinfo.h \
+  qt/token.h \
+  qt/tokenitemmodel.h \
+  qt/tokenamountfield.h \
   qt/trafficgraphwidget.h \
   qt/transactiondesc.h \
   qt/transactiondescdialog.h \
@@ -328,6 +333,8 @@ BITCOIN_QT_CPP = \
   qt/rpcconsole.cpp \
   qt/splashscreen.cpp \
   qt/tabbarinfo.cpp \
+  qt/tokenitemmodel.cpp \
+  qt/tokenamountfield.cpp \
   qt/trafficgraphwidget.cpp \
   qt/utilitydialog.cpp \
   qt/winshutdownmonitor.cpp
