--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -127,7 +127,7 @@ QT_MOC_CPP = \
   qt/moc_tokendescdialog.cpp \
   qt/moc_tokenitemmodel.cpp \
   qt/moc_tokenfilterproxy.cpp \
-  qt/moc_tokenview.cpp \
+  qt/moc_tokentransactionview.cpp \
   qt/moc_tokentransactiontablemodel.cpp \
   qt/moc_tokentransactiondesc.cpp \
   qt/moc_trafficgraphwidget.cpp \
@@ -218,7 +218,6 @@ BITCOIN_QT_H = \
   qt/paymentrequestplus.h \
   qt/paymentserver.h \
   qt/peertablemodel.h \
-  qt/platformstyle.h \
   qt/lsrtoken.h \
   qt/qvalidatedlineedit.h \
   qt/qvalidatedtextedit.h \
@@ -240,7 +239,7 @@ BITCOIN_QT_H = \
   qt/tokendescdialog.h \
   qt/tokenitemmodel.h \
   qt/tokenfilterproxy.h \
-  qt/tokenview.h \
+  qt/tokentransactionview.h \
   qt/tokentransactionrecord.h \
   qt/tokentransactiontablemodel.h \
   qt/tokentransactiondesc.h \
@@ -343,7 +342,6 @@ BITCOIN_QT_CPP = \
   qt/optionsdialog.cpp \
   qt/optionsmodel.cpp \
   qt/peertablemodel.cpp \
-  qt/platformstyle.cpp \
   qt/qvalidatedlineedit.cpp \
   qt/qvalidatedtextedit.cpp \
   qt/qvaluecombobox.cpp \
@@ -411,7 +409,7 @@ BITCOIN_QT_CPP += \
   qt/signverifymessagedialog.cpp \
   qt/tokendescdialog.cpp \
   qt/tokenfilterproxy.cpp \
-  qt/tokenview.cpp \
+  qt/tokentransactionview.cpp \
   qt/tokentransactionrecord.cpp \
   qt/tokentransactiontablemodel.cpp \
   qt/tokentransactiondesc.cpp \
