Add TokenTxWorker thread to loop LSR token tx Update Lux Standard Request (LSR) token tx record

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -150,6 +150,7 @@ QT_MOC = \
   qt/bitcoinamountfield.moc \
   qt/intro.moc \
   qt/tokenamountfield.moc \
+  qt/tokenitemmodel.moc \
   qt/overviewpage.moc \
   qt/rpcconsole.moc
 
