Enable SCRIPT_VERIFY_WITNESS for txmempool SCRIPT_VERIFY_CLEANSTACK requires SCRIPT_VERIFY_WITNESS, so we need to turn both off, and compare against just turning off CLEANSTACK to see if the failure is specifically due to witness validation. Reject codes greater or equal to this can be returned by AcceptToMemPool for transactions, to signal internal conditions. They cannot and should not be sent over the P2P network.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -94,6 +94,7 @@ BITCOIN_CORE_H = \
   compat.h \
   compat/sanity.h \
   consensus/merkle.h \
+  consensus/validation.h \
   compressor.h \
   consensus/params.h \
   primitives/block.h \
