HDChain - Add OPENSSL_cleanse
Signed-off-by: 216k155 <216k155@luxcore.io>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -144,6 +144,7 @@ BITCOIN_CORE_H = \
   spork.h \
   stake.h \
   streams.h \
+  support/cleanse.h \
   support/allocators/secure.h \
   support/allocators/zeroafterfree.h \
   support/cleanse.h \
@@ -593,6 +594,7 @@ libbitcoin_util_a_SOURCES = \
   clientversion.cpp \
   random.cpp \
   rpcprotocol.cpp \
+  support/cleanse.cpp \
   rpcutil.cpp \
   sync.cpp \
   uint256.cpp \
