Remove leftovers of BOOST_FOREACH, replace BOOST_REVERSE_FOREACH with reverse_iterator

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -127,6 +127,7 @@ BITCOIN_CORE_H = \
   protocol.h \
   pubkey.h \
   random.h \
+  reverse_iterator.h \
   reverselock.h \
   rpcblockchain.h \
   rpcclient.h \
