wip: insight calls for 5.3.X (squashed)
txdb: fix CLevelDBBatch constructor
spentindex: remove serialization version
rpc: use the new prototype format

Note: -timestampindex disabled for now... incomplete

Signed-off-by: barrystyle <barrystyle@westnet.com.au>
Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,7 @@ BITCOIN_CORE_H = \
   activemasternode.h \
   addrdb.h \
   addrman.h \
+  addressindex.h \
   alert.h \
   amount.h \
   base58.h \
@@ -145,6 +146,8 @@ BITCOIN_CORE_H = \
   script/sign.h \
   script/standard.h \
   script/script_error.h \
+  serialize.h \
+  spentindex.h \
   spork.h \
   stake.h \
   streams.h \
