--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -37,9 +37,7 @@ RAW_TEST_FILES = test/data/alertTests.raw
 GENERATED_TEST_FILES = $(JSON_TEST_FILES:.json=.json.h) $(RAW_TEST_FILES:.raw=.raw.h)
 
 TOFIX_TESTS = \
-  test/miner_tests.cpp \
-  test/scriptnum_tests.cpp \
-  test/uint256_tests.cpp
+  test/miner_tests.cpp
 BITCOIN_TESTS =\
   test/bignum.h \
   test/entry_helper.h \
@@ -68,6 +66,7 @@ BITCOIN_TESTS =\
   test/sanity_tests.cpp \
   test/script_P2SH_tests.cpp \
   test/script_tests.cpp \
+  test/scriptnum_tests.cpp \
   test/serialize_tests.cpp \
   test/sighash_tests.cpp \
   test/sigopcount_tests.cpp \
@@ -75,6 +74,7 @@ BITCOIN_TESTS =\
   test/test_lux.cpp \
   test/timedata_tests.cpp \
   test/transaction_tests.cpp \
+  test/uint256_tests.cpp \
   test/univalue_tests.cpp \
   test/util_tests.cpp
 
