--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,6 +77,8 @@ BITCOIN_CORE_H = \
   alert.h \
   amount.h \
   base58.h \
+  bip39.h \
+  bip39_wordlist.h \
   bech32.h \
   bip38.h \
   bloom.h \
@@ -104,6 +106,7 @@ BITCOIN_CORE_H = \
   darksend.h \
   db.h \
   hash.h \
+  hdchain.h \
   indirectmap.h \
   init.h \
   instantx.h \
@@ -400,6 +403,7 @@ libbitcoin_common_a_CFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) -std=c99
 libbitcoin_common_a_SOURCES = \
   amount.cpp \
   base58.cpp \
+  bip39.cpp \
   bech32.cpp \
   bip38.cpp \
   chainparams.cpp \
@@ -410,6 +414,7 @@ libbitcoin_common_a_SOURCES = \
   core_read.cpp \
   core_write.cpp \
   hash.cpp \
+  hdchain.cpp \
   key.cpp \
   keystore.cpp \
   netbase.cpp \
